--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,10 +15,11 @@
     "daisyui": "^2.47.1",
     "eslint": "8.32.0",
     "eslint-config-next": "13.1.5",
-    "framer-motion": "^8.5.2",
+    "framer-motion": "^8.5.5",
     "next": "13.1.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hot-toast": "^2.4.0",
     "react-icons": "^4.7.1",
     "urql": "^3.0.3"
   },
